# avatar-gen

./: .gitignore  .gitmodules  .skyignore  GITHUB.md  README.md  SPEC.md  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yml
assets/avatar/custom/: funny_short.json
assets/avatar/podcast/: example_podcast.json
assets/podcast/: podcast_jobs.json
docs/: EXPERIMENTAL_PODCAST.md
scripts/: avatar_segments.py  detect_podcast_hosts.py  diarize_podcast_audio.py  download_longcat_weights.sh  generate_avatar.sh  launch_longcat_azure_ncc_manual.sh  launch_longcat_podcast_sky.sh  launch_longcat_sky.sh  make_mixed_podcast_audio.py  prepare_longcat_avatar_input.py  prepare_longcat_avatar_multi_input.py  run_longcat_avatar_multi.sh  run_longcat_avatar_podcast.py  run_longcat_avatar_single.sh  run_podcast_pipeline.sh  setup_and_run_longcat_ncc.sh  setup_and_run_longcat_podcast_ncc.sh  setup_ncc_gpu.sh  setup_skypilot.sh  setup_uv_env.sh  validate_longcat_avatar_setup.py
skypilot/: avatar.yaml  longcat_avatar_azure_westeurope_h100.yaml  longcat_podcast_avatar_aws_h100_ondemand.yaml  longcat_podcast_avatar_aws_h100_spot.yaml  longcat_podcast_avatar_azure_westeurope_h100.yaml  longcat_podcast_azure_westeurope_h100.yaml  podcast_blob_inputs.example.yaml
tests/: conftest.py  test_avatar_segments.py  test_detect_podcast_hosts.py  test_diarize_podcast_audio.py  test_make_mixed_podcast_audio.py  test_prepare_longcat_avatar_input.py  test_prepare_longcat_avatar_multi_input.py  test_run_longcat_avatar_podcast.py  test_validate_longcat_avatar_setup.py
