[project]
name = "avatar-gen"
version = "0.1.0"
description = "LongCat Avatar generation overlay"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.coverage.run]
source = ["scripts"]
branch = true
omit = []

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
